<resources>
    <string name="app_name">File View Demo</string>
    <string name="empty_user_name">User name cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="error_invalid_user_name">Invalid User Name</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="password">Password</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="name">Kimberly Lee</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="video">Video</string>
    <string name="email">Email</string>
    <string name="_650_550_1367">(650) 550-1367</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="recent">Recent</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
</resources>
