<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Contact_activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
      >

         <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
            app:collapsedTitleTextAppearance="@style/title.collapsed"
            app:expandedTitleTextAppearance="@style/title.expanded"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator">


            <ImageView
                android:id="@+id/img6"
                android:layout_width="400dp"
                android:layout_height="190dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image2"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/style_toolbar"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/left_arrow2"
                ></androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtinputlayout"
                style="@style/match_wrap">

                <TextView
                    style="@style/match_wrap"
                    android:layout_margin="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/view_match" />


            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/relative_layout"
                    style="@style/wrap_wrap"
                    android:layout_marginLeft="25dp">

                    <ImageView
                        android:id="@+id/img1"
                        style="@style/wrap_wrap"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        style="@style/wrap_wrap"
                        android:layout_below="@+id/img1"
                        android:layout_centerInParent="true"
                        android:text="@string/call"
                        android:textColor="@color/colorblue" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relative_layout1"
                    style="@style/wrap_wrap"
                    android:layout_marginLeft="40dp">

                    <ImageView
                        android:id="@+id/img2"
                        style="@style/wrap_wrap"
                        android:layout_marginLeft="6dp"
                        android:src="@drawable/message1" />

                    <TextView
                        style="@style/wrap_wrap"
                        android:layout_below="@+id/img2"
                        android:text="@string/text"
                        android:textColor="@color/colorblue" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relative_layout3"
                    style="@style/wrap_wrap"
                    android:layout_marginLeft="40dp">

                    <ImageView
                        android:id="@+id/img3"
                        style="@style/wrap_wrap"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/video2" />

                    <TextView
                        style="@style/wrap_wrap"
                        android:layout_below="@+id/img3"
                        android:layout_marginLeft="5dp"
                        android:text="@string/video"
                        android:textColor="@color/colorblue" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relative_layout4"
                    style="@style/wrap_wrap"
                    android:layout_marginLeft="40dp">

                    <ImageView
                        android:id="@+id/img4"
                        style="@style/wrap_wrap"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/envelope_img1" />

                    <TextView
                        style="@style/wrap_wrap"
                        android:layout_below="@+id/img4"
                        android:layout_marginLeft="5dp"
                        android:text="@string/email"
                        android:textColor="@color/colorblue" />

                </RelativeLayout>

            </LinearLayout>

            <View style="@style/view_match" />


            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="29dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/call_answer" />

                <RelativeLayout
                    style="@style/wrap_wrap"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/call_txt"
                        style="@style/wrap_wrap"
                        android:text="(650) 550-1367"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/wrap_wrap"
                        android:layout_below="@+id/call_txt"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/mobile"
                        android:textColor="@color/colorPrimaryDark" />

                </RelativeLayout>


                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/video2" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/message1" />

            </LinearLayout>

            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal">


                <RelativeLayout
                    style="@style/wrap_wrap"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/call_txt1"
                        style="@style/wrap_wrap"
                        android:text="(650) 550-9462"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/wrap_wrap"
                        android:layout_below="@+id/call_txt1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/home"
                        android:textColor="@color/colorPrimaryDark" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/message1" />
            </LinearLayout>

            <View style="@style/view_match" />

            <RelativeLayout style="@style/match_wrap">

                <ImageView
                    android:id="@+id/img5"
                    android:layout_width="20dp"
                    android:layout_height="29dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/grey_envelope" />

                <TextView
                    android:id="@+id/email_id"
                    style="@style/wrap_wrap"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/img5"
                    android:text="corgicrazy@gmail.com"
                    android:textColor="@color/colorBlack" />

                <TextView
                    style="@style/wrap_wrap"
                    android:layout_below="@+id/email_id"
                    android:layout_toRightOf="@+id/img5"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/home"
                    android:textColor="@color/colorPrimaryDark" />

            </RelativeLayout>


            <LinearLayout
                style="@style/wrap_wrap"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@color/colorPrimaryDark" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_edit"
                    app:backgroundTint="@color/colorblue1"
                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>


                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>

            <TextView
                style="@style/wrap_wrap"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/recent"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

    <!--</ScrollView>-->
    </androidx.core.widget.NestedScrollView>
</LinearLayout>